# SoulDebug

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Doc/: summary.md
ExFileFormat/: CMakeLists.txt  parseElf.h
ExFileFormat/ExELF/: elf_info.h  parse_elf.h
SoulDebug/: CMakeLists.txt  main.cpp
Unit/: type_unit.h
